--- a/Login.html
+++ b/Login.html
@@ -22,21 +22,20 @@
                 <input class="roboto-font" type="text" placeholder="Email">
             </div>
             <div class="column-box">
-                <input type="text" placeholder="Password">
+                <input class="roboto-font" type="text" placeholder="Password">
             </div>              
-            <button class="forgot-button roboto-font">Forgot Password?</button>
+            <a href="#" class="forgot-button roboto-font">Forgot Password?</a>
             <div class="login-button">
-                <button class="roboto-font">Sign In</button>
+                <button class="roboto-bold">Sign In</button>
             </div>
             <p class="roboto-font">Or</p>
-            <div class="other-login">
-                <button class="facebook-login">
-                    <img src="https://img.icons8.com/?size=512&id=17949&format=png" alt="Google" width="30px" height="30px">
-                </button>
-                <button class="google-login">
-                    <img src="https://static.vecteezy.com/system/resources/previews/018/930/476/non_2x/facebook-logo-facebook-icon-transparent-free-png.png" 
-                    alt="Facebook" width="50px" height="50px">
-                </button>
+            <div class="social-login">
+                <a href="#" class="social-icon">
+                    <img src="assets/google.png" alt="Google" width="40px" height="40px">
+                </a>
+                <a href="#" class="social-icon">
+                    <img src="assets/facebook.png" alt="Facebook" width="40px" height="40px">
+                </a>
             </div>
             <p class="roboto-font">Don't have the account? <a href="#" class="link-register roboto-bold">Sign Up</a></p>
         </form>
