--- a/SignIn.html
+++ b/SignIn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In page</title>
-    
+
     <link rel="stylesheet" href="style.css">
 
     <!-- Google Font -->
@@ -43,7 +43,7 @@
                 </a>
             </div>
 
-            <p class="roboto-font">Don't have the account? <a href="#" class="link-register roboto-bold">Sign Up</a></p>
+            <p class="roboto-font">Don't have the account? <a href="SignUp.html" class="link-register roboto-bold">Sign Up</a></p>
         
         </form>
     </div>
